PortalBackend/Demo/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: demo-service
#spec:
#  type: LoadBalancer
#  selector:
#    app: demo-app
#  ports:
#    - port: 8080
#      targetPort: 8080
##      nodePort: 30000
##  type: NodePort
#
#
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  selector:
    app: demo-app
  ports:
    - name: demo-service-port
      protocol: TCP
      port: 8080
      targetPort: 8080
